--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
                 <version>3.11.0</version>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
     </build>
 </project>
